--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,19 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
-  #flutter_launcher_icons: ^0.9.2
   google_fonts: ^2.2.0
   http: ^0.13.4
   provider: ^6.0.2
   url_launcher: ^6.0.17
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
   android: "launcher_icon"
