--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,10 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+  dio: ^4.0.4
   flutter:
     sdk: flutter
   google_fonts: ^2.2.0
-  http: ^0.13.4
   provider: ^6.0.2
   url_launcher: ^6.0.20
 
